--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
     <div class="container">
         
     </div>
-    <script src="/js/redirect.js"></script>
+    //<script src="/js/redirect.js"></script>
 
 </body>
 </html>
