--- a/views/project.ejs
+++ b/views/project.ejs
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <script src="/js/filter-p.js"></script>
+        //<script src="/js/filter-p.js"></script>
         <!-- <script src="/js/project_scroll.js"></script> -->
 </body>
 
