--- a/public/css/style_index.css
+++ b/public/css/style_index.css
@@ -4,7 +4,7 @@
 main {
   display: flex;
   justify-content: center;
-  padding: 60px;
+  padding: 50px;
 }
 
 .intro h1 {
@@ -44,6 +44,39 @@ main {
 .description {
   margin-top: 20px;
   font-size: 1.2em;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.desc-contain {
+  padding-left: 235px;
+}
+
+.desc-i {
+  font-size: 1.5rem;
+}
+
+.scroll-icon {
+  position: absolute;
+  bottom: 6px; 
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 20px;
+  color: white;
+  pointer-events: none; 
+}
+
+.scroll-icon i {
+  animation: bounce 1.5s infinite;
+}
+
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(5px); }
 }
 
 /* Combined Media Queries for Optimized Responsiveness */
