--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,23 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <title>Johnson_Chong_Portfolio_2024</title>
   <link rel="stylesheet" href="/css/style_index.css">
   <link rel="stylesheet" href="/css/general.css">
 </head>
+
 <body>
   <%- include ('partials/navbar') %>
     <main>
       <section class="intro">
-        <h1><%= index.title %></h1>
+        <h1>
+          <%= index.title %>
+        </h1>
         <p class="intro-text">
           <%- index.introText %>
-        </p>      
+        </p>
         <p class="description">
           <%- index.description %>
         </p>
       </section>
     </main>
+    <section>
+      <div class="container">
+        <div class="scroll-icon">
+          <span class="scroll-text">Scroll</span>
+          <i class="fas fa-angle-down"></i> <!-- Down arrow icon -->
+        </div>
+      </div>
+      <div class="desc-contain">
+      </div>
+    </section>
     <!-- <script src="/js/hello_spin.js"></script> -->
 </body>
 
