--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,6 +50,41 @@
                 </div>
             </div>
         </div>
+        <div class="container-c my-5">
+            <div class="row">
+                <div class="col-md-5 text-light custom-col">
+                    <h3 class="custom-msg">
+                        <%- about.message %>
+                    </h3>
+                    <hr class="custom-underline">
+                    <div class="contact-info mt-4 row justify-content-start">
+                        <div class="col-auto d-flex align-items-center me-3">
+                            <a href="<%- about.github %>" class="ms-2"><img src="/images/github-icon.png" alt="GitHub icon" class="custom-icon"></a>
+                        </div>
+                        <div class="col-auto d-flex align-items-center">
+                            <a href="<%- about.linkedin %>" class="ms-2"><img src="/images/linkedin.png" alt="LinkedIn icon" class="custom-icon"></a>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="col-md-4">
+                    <form>
+                        <div class="mb-3">
+                            <input type="text" class="form-control custom-input" placeholder="Name*" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control custom-input" placeholder="Email*" required>
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control custom-input" rows="7" placeholder="Message"
+                                required></textarea>
+                        </div>
+                        <button type="submit" class="btn custom-button">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
 </body>
 
