--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,10 @@
 <footer>
-    <div class="container-fluid">
-        <div class="platform">
-            <a class="platform-links" href="https://github.com/karqeeZ?tab=repositories" target="_blank">
-                <img src="/images/github-logo.png" alt="GitHub" class="icon github-icon">
-            </a>
-            <a class="platform-links" href="https://www.linkedin.com/in/johnson-chong-56260129b" target="_blank">
-                <img src="/images/linkedin-logo.png" alt="LinkedIn" class="icon linkedin-icon">
-            </a>
-        </div>
+    <div class="footer-container">
+        <p class="footer-text">© 2025 Johnson Chong</p>
+        <nav class="footer-nav">
+            <a href="/" class="footer-link">Home</a>
+            <a href="/projects" class="footer-link">Projects</a>
+            <a href="/about" class="footer-link">About Me</a>
+        </nav>
     </div>
 </footer>
