--- a/public/css/style_about.css
+++ b/public/css/style_about.css
@@ -2,7 +2,7 @@
     text-align: left;
     text-decoration: underline 2px solid;
     text-decoration-color: #00FFFF;
-    font-size: 45px;
+    font-size: 40px;
     font-family: 'Elephant',sans-serif;
   }
 
@@ -25,8 +25,8 @@
   }
   
   .profile-img {
-    width: 120px;
-    height: 120px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 15px;
@@ -42,7 +42,8 @@
 .intro h2,
 .skills h2,
 .hobbies h2 {
-    font-size: 26px;
+    font-size: 28px;
+    font-family: 'Elephant', 'Sans Serif' ;
 }
   
   .profile p {
@@ -59,7 +60,7 @@
   }
   
   h2 {
-    font-size: 20px;
+    font-size: 22px;
     color: white;
     border-bottom: 2px solid #00FFFF;
     padding-bottom: 5px;
@@ -71,7 +72,7 @@
   .skills p {
     margin-bottom: 15px;
     color: white;
-    font-size: 18px;
+    font-size: 20px;
   }
   
   .skills ul {
@@ -82,6 +83,41 @@
   .skills li {
     margin-bottom: 5px;
     color: white;
+    font-size: 20px;
+  }
+
+  .intro {
+    animation: fade-in 0.5s linear;
+  }
+
+  .hobbies {
+    animation: fade-in 0.5s linear;
+  }
+
+  @keyframes fade-in {
+    from { 
+      opacity: 0;
+      transform: translateX(70px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+
+  .skills {
+    animation: fade-in2 0.5s linear;
+  }
+
+  @keyframes fade-in2 {
+    from { 
+      opacity: 0;
+      transform: translateX(-70px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+    }
   }
 
   h3 {
