--- a/public/css/style_details.css
+++ b/public/css/style_details.css
@@ -1,76 +1,6 @@
-/* .grid-container {
-    display: grid;
-    gap: 30px;
-    padding: 70px;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, minmax(80px, auto));
-  }
-  
-  .grid-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1A547B;
-    border: solid 3px #00FFFF;
-    text-align: center;
-    font-size: 30px;
-    border-radius: 25px;
-    transition: transform 0.3s ease;
-  }
-  
-  .grid-item:hover {
-    transform: scale(1.05);
-  }
-  
- 
-  .item1 {
-    grid-area: 1 / 1 / 3 / 6;
-    padding: 50px;
-  }
-  
-  .item2 {
-    grid-area: 1 / 6 / 3 / 8;
-    padding: 50px;
-  }
-  
-  .item3 {
-    grid-area: 1 / 8 / 3 / 10;
-    padding: 50px;
-  }
-  
-  .item4 {
-    grid-area: 1 / 10 / 4 / 13;
-    padding: 50px;
-  }
-  
-  .item5 {
-    grid-area: 3 / 1 / 6 / 4;
-    padding: 50px;
-  }
-  
-  .item6 {
-    grid-area: 3 / 4 / 6 / 10;
-  }
-  
-  .item7 {
-    grid-area: 6 / 1 / 8 / 6;
-    padding: 50px;
-  }
-  
-  .item8 {
-    grid-area: 6 / 6 / 8 / 10;
-    padding: 50px;
-  }
-  
-  .item9 {
-    grid-area: 4 / 10 / 8 / 13;
-    padding: 50px;
-  } */
-
-
 .carousel-inner img, 
 .carousel-inner video {
-  max-height: 500px;
+  max-height: 700px;
   max-width: 1000px;
   width: auto; 
   height: auto; 
@@ -85,10 +15,11 @@
 }
 
 .custom-project-title {
-  font-size: 30px; /* Adjust title size */
+  font-size: 40px; /* Adjust title size */
   font-weight: bold; /* Bold font */
   color: white; /* Custom color */
   font-family: 'Elephant',sans-serif;
+  text-decoration:underline solid 2px #00FFFF;
 }
 
 .custom-project-description {
@@ -106,12 +37,25 @@
 
 .desc-main {
   text-align: left;
-  font-size: 18px;
+  font-size: 22px;
   padding-top: 50px;
   max-width: 1000px;
   margin: auto;
-  border-top: white 2px solid;
   padding-bottom: 10px;
+  animation: fade-in 0.4s linear;
+  /* animation-timeline: view();
+  animation-range-end: 350px; */
+}
+
+@keyframes fade-in {
+  from { 
+    opacity: 0;
+    transform: translateY(70px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 .link-d {
@@ -121,12 +65,14 @@
 
 .btn-d {
   background-color: #00FFFF;
-  color:#1e2a47 ;
+  color: #1e2a47;
   padding: 10px;
   font-size: 20px;
   border-radius: 20px;
   transition: background-color 0.3s ease;
   font-family: 'Elephant', sans-serif;
+  text-align: center;
+  border:#1e2a47 1px solid;
 }
 
 .btn-d:hover {
@@ -149,4 +95,8 @@ em {
 
 .link-d:hover {
   text-decoration: underline #00FFFF;
+}
+
+.my-3 {
+  padding-bottom: 40px;
 }
