--- a/public/css/style_project.css
+++ b/public/css/style_project.css
@@ -2,20 +2,18 @@
 .section-container {
   border: 2px solid #00FFFF;
   border-radius: 20px;
-  margin: 20px auto; /* Centers and adds spacing around sections */
+  margin: 20px auto; 
   padding: 20px;
-  background-color: #f8f9fa; /* Light background for contrast */
+  background-color: #f8f9fa; 
   max-width: 1200px;
 }
 
-/* Section Title Styling */
-.section-title {
-  font-weight: bold;
-  font-size: 35px;
-  color: #1A547B;
-  text-align: center;
-  margin-bottom: 20px;
-  text-decoration: underline 2px solid #00FFFF;
+.header-p {
+  color: white;
+  text-align: left;
+  margin-bottom: 4px;
+  text-decoration: underline 2px #00FFFF;
+  font-family: 'Elephant', sans-serif;
 }
 
 /* Grid Container Adjustments */
@@ -25,29 +23,73 @@
   gap: 20px;
 }
 
+.mb-4 {
+  max-width: 1200px;
+}
+
 /* Card Styling */
 .card {
   background-size: cover;
   background-position: center;
-  padding: 20px;
+  padding: 5px;
   text-decoration: none;
   border-radius: 5px;
   position: relative;
   z-index: 1;
   transition: all 0.2s ease;
-  border: 2px solid #00FFFF; /* Soft border for each card */
-  background-color: #1A547B;
+  background-color: #f8f9fa;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+.side1 {
+  animation: fade-in 0.5s linear;
+}
+
+@keyframes fade-in {
+  from { 
+    opacity: 0;
+    transform: translateX(-70px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.side2 {
+  animation: fadeIn 0.5s linear;
+}
+
+@keyframes fadeIn {
+  from { 
+    opacity: 0;
+    transform: translateX(70px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
 
 .card-title {
-  color: white;
+  color: black;
   font-family: 'Elephant', sans-serif;
+}
+
+.card-img-top {
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  height: 200px; 
+  border-radius: 8px; 
+  border: #dfdfdf solid 5px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
 }
 
 .card:hover {
   transform: scale(1.05);
   z-index: 2;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow on hover */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
 }
 
 .link-p {
@@ -68,15 +110,31 @@
   text-align: left;
   text-decoration: underline 2px solid;
   text-decoration-color: #00FFFF;
-  font-size: 45px;
+  font-size: 40px;
   font-family: 'Elephant',sans-serif;
 }
 
-.header-p {
-  color: white;
-  text-align: left;
-  margin-bottom: 30px;
-  text-decoration: underline #00FFFF;
+.col {
+  height: auto;
+}
+
+.btn-d {
+  background-color: #00FFFF;
+  color: #1e2a47;
+  padding: 10px 20px;
+  font-size: 14px;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+  font-family: 'Elephant', sans-serif;
+  display: inline-block; 
+  margin-top: 10px; 
+  text-decoration: none;
+}
+
+.btn-d:hover {
+  background-color: #1e2a47;
+  color: #00FFFF;
+  border: 1px solid #00FFFF;
 }
 
 
