--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <title>Johnson_Chong_Portfolio_2024</title>
+  <title>Johnson | Portfolio</title>
   <link rel="stylesheet" href="/css/style_index.css">
   <link rel="stylesheet" href="/css/general.css">
+  <script src="/js/scrollInteractable.js" defer></script>
 </head>
 
 <body>
+  <p class="scroll-watcher"></p>
   <%- include ('partials/navbar') %>
     <main>
       <section class="intro">
@@ -27,17 +29,48 @@
         </p>
       </section>
     </main>
-    <section>
-      <div class="container">
-        <div class="scroll-icon">
-          <span class="scroll-text">Scroll</span>
-          <i class="fas fa-angle-down"></i> <!-- Down arrow icon -->
+      <div class="container-scroll">
+        <a href="#project" class="scroll-decor">
+          <div class="scroll-icon" id="scrollIcon">
+            <span class="scroll-text">Scroll</span>
+            <i class="fas fa-angle-down"></i>
+          </div>
+        </a>
+      </div>
+      <h3 class="subheader" id="project"><em>Here are some of my best work!</em></h3>
+      <div class="container" >
+        <div class="row g-0">
+          <div class="col-md-6 col-lg-6">
+            <div class="container-box text-container">
+              <p><em>NutriNourish</em> is a web application that allows for users to Create, Read, Update and Delete (CRUD) their very own recipes, whilst providing added features like meal plan organizer as well as a reviews page for users to share their opinions on specific recipes.<br><br><a class="link-project" href="./projects/1">Click here to find out more about <em>NutriNourish</em></a></p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <div class="container-box image-container">
+              <img src="/images/p1/main.png" alt="Homepage of NutriNourish" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <div class="container-box image-container">
+              <img src="/images/p4/Hi-Fi.png" alt="4 Main pages in Dine2Gather" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <div class="container-box text-container">
+              <p><p><em>Dine2Gather</em> is an app designed to connect users globally through unique, local dining experiences. It features listings posted by local hosts with key details like price, location, menu, and booking slots, and integrates booking and contact features for convenience.<br><br><a class="link-project" href="./projects/4">Click here to find out more about <em>Dine2Gather</em></a></p>
+
+            </div>
+          </div>
         </div>
       </div>
-      <div class="desc-contain">
-      </div>
-    </section>
+    <div class="btn-container">
+      <a href="/projects">
+        <button class="btn-d">View More</button>
+      </a>
+    </div>
+    <br>
     <!-- <script src="/js/hello_spin.js"></script> -->
+    <%- include ('partials/footer') %>
 </body>
 
 </html>
