--- a/views/project.ejs
+++ b/views/project.ejs
@@ -6,24 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Johnson_Chong_Portfolio_2024</title>
+    <title>Johnson | Portfolio</title>
     <link rel="stylesheet" href="/css/style_project.css">
     <link rel="stylesheet" href="/css/general.css">
 </head>
 
 <body>
     <%- include ('partials/navbar') %>
-        <h3 class="title-p text-center my-4">Projects</h3>
+  <p class="scroll-watcher"></p>
 
-        <div class="container mb-5">
+        <h2 class="title-p text-center my-4">Projects</h2>
+        <div class="container mb-4">
             <!-- Development Projects Section -->
             <div>
-                <h3 class="header-p">Development</h3>
-                <div class="row row-cols-1 row-cols-md-3 g-4 contain">
+                <a href="#designS">
+                    <h3 class="header-p">Design</h3>
+                </a>
+                <div class="row row-cols-1 row-cols-md-3 g-4 contain" id="designS">
                     <% projects.forEach(project=> { %>
-                        <% if (project.type==='development' ) { %>
+                        <% if (project.type==='design' ) { %>
                             <div class="col">
-                                <a href="/projects/<%= project.id %>" class="card h-100 text-decoration-none">
+                                <a href="/projects/<%= project.id %>" class="card h-100 text-decoration-none side1">
                                     <div class="card-img-top"
                                         style="background-image: url('<%= project.items[0].src %>'); background-size: cover; height: 200px;">
                                     </div>
@@ -38,15 +41,13 @@
                                 <% }) %>
                 </div>
             </div>
-
-            <!-- Design Projects Section -->
             <div>
-                <h3 class="header-p">Design</h3>
+                <h3 class="header-p">Development</h3>
                 <div class="row row-cols-1 row-cols-md-3 g-4 contain">
                     <% projects.forEach(project=> { %>
-                        <% if (project.type==='design' ) { %>
+                        <% if (project.type==='development' ) { %>
                             <div class="col">
-                                <a href="/projects/<%= project.id %>" class="card h-100 text-decoration-none">
+                                <a href="/projects/<%= project.id %>" class="card h-100 text-decoration-none side2">
                                     <div class="card-img-top"
                                         style="background-image: url('<%= project.items[0].src %>'); background-size: cover; height: 200px;">
                                     </div>
@@ -63,8 +64,9 @@
             </div>
         </div>
 
-        //<script src="/js/filter-p.js"></script>
-        <!-- <script src="/js/project_scroll.js"></script> -->
+        <%- include ('partials/footer') %>
+
+            <!-- <script src="/js/project_scroll.js"></script> -->
 </body>
 
 </html>
