--- a/views/projectDetails.ejs
+++ b/views/projectDetails.ejs
@@ -27,7 +27,7 @@
       </div>
     </section>
     <section class="container my-3">
-      <div id="projectCarousel" class="carousel slide mb-4" data-bs-ride="carousel" data-bs-interval="5000"
+      <div id="projectCarousel" class="carousel slide mb-4" data-bs-interval="5000"
         data-bs-pause="hover">
         <div class="carousel-inner">
           <% project.items.forEach((item, index)=> { %>
