--- a/views/about.ejs
+++ b/views/about.ejs
@@ -33,10 +33,10 @@
                 <div class="about-content">
                     <section class="intro">
                         <h2>About Me</h2>
-                        <p>Hello! I'm Johnson Chong, a passionate web developer with a focus on creating sleek and
+                        <p>Hello! I'm Johnson Chong, an aspiring UI/UX Designer with a focus on creating sleek and
                             responsive designs. Currently, I'm pursuing a Diploma in Digital Design and Development at
-                            Republic Polytechnic. With a strong foundation in HTML, CSS, and JavaScript, I aim to craft
-                            engaging user experiences. When I'm not coding, you'll find me exploring nature, capturing
+                            Republic Polytechnic. With a strong foundation in HTML, CSS, JavaScript and Figma, I aim to craft
+                            engaging user experiences. When I'm not coding or designing, you'll find me exploring nature, capturing
                             moments through photography, or traveling to new places.</p>
                     </section>
 
