--- a/views/about.ejs
+++ b/views/about.ejs
@@ -35,8 +35,10 @@
                         <h2>About Me</h2>
                         <p>Hello! I'm Johnson Chong, an aspiring UI/UX Designer with a focus on creating sleek and
                             responsive designs. Currently, I'm pursuing a Diploma in Digital Design and Development at
-                            Republic Polytechnic. With a strong foundation in HTML, CSS, JavaScript and Figma, I aim to craft
-                            engaging user experiences. When I'm not coding or designing, you'll find me exploring nature, capturing
+                            Republic Polytechnic. With a strong foundation in HTML, CSS, JavaScript and Figma, I aim to
+                            craft
+                            engaging user experiences. When I'm not coding or designing, you'll find me exploring
+                            nature, capturing
                             moments through photography, or traveling to new places.</p>
                     </section>
 
@@ -75,6 +77,9 @@
                             <a href="<%- about.linkedin %>" class="ms-2"><img src="/images/linkedin.png"
                                     alt="LinkedIn icon" class="custom-icon"></a>
                         </div>
+                        <div class="row">
+                            <a class="link-style" href="https://myrp-my.sharepoint.com/:u:/g/personal/23009886_myrp_edu_sg/EXkyUMqPNCFBjbFxPunu0r0B2JT07UfNbZ7XmTaZuNL4hw?e=r0Yi34&download=1" download><em>Download my resume here!</em></a>
+                        </div>
                     </div>
 
                 </div>
@@ -82,16 +87,16 @@
                 <div class="col-md-4">
                     <form id="contact-form">
                         <div class="mb-3">
-                            <input type="text" id="name" class="form-control custom-input" name="name" placeholder="Name*"
-                                required>
+                            <input type="text" id="name" class="form-control custom-input" name="name"
+                                placeholder="Name*" required>
                         </div>
                         <div class="mb-3">
-                            <input type="email" id="email" class="form-control custom-input" name="email" placeholder="Email*"
-                                required>
+                            <input type="email" id="email" class="form-control custom-input" name="email"
+                                placeholder="Email*" required>
                         </div>
                         <div class="mb-3">
-                            <textarea class="form-control custom-input" id="message" name="message" rows="7" placeholder="Message"
-                                required></textarea>
+                            <textarea class="form-control custom-input" id="message" name="message" rows="7"
+                                placeholder="Message" required></textarea>
                         </div>
                         <button type="submit" onclick="sendEmail()" class="btn custom-button">Send</button>
                     </form>
